--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "../style/global.css";
 import Nav from "@/components/Nav.astro";
 import { getLangFromUrl } from "@/i18n";
 const lang = getLangFromUrl(Astro.url);
