--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -13,27 +13,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = await useTranslation(lang);
 ---
 
-<Layout title="Welcome to Astro.">
-  <main>
-    <h1>{t.welcome.header}</h1>
-    <p class="instructions">
-      {t.welcome.subhead}
-    </p>
-    <p>
-      <Trans translation={t.welcome.text_with_tags}>
-        Hi, <br /> Welcome Home!
-      </Trans>
-    </p>
-
-    <p>
-      <Trans translation={t.welcome.interpolate}>
-        How <strong style="color: red;">Great is this</strong> text in the line <a
-          href="#">Find out</a
-        >
-      </Trans>
-    </p>
-  </main>
-</Layout>
+<Layout title="O M S M A R T" />
 
 <style>
   main {
