--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -59,7 +59,7 @@ const nodeLayouts = [
     <video
       id="bg-video"
       class="border-0 w-full h-full object-cover pointer-events-none"
-      src="/video/video.mp4"
+      src="/video/black.mp4"
       autoplay
       muted
       loop
@@ -134,8 +134,8 @@ const nodeLayouts = [
   <footer class="bottom-0 absolute px-28 py-12 w-full text-white">
     <div class="items-end grid grid-cols-3">
       <!-- Columna Izquierda -->
-      <div class="flex flex-col justify-center items-start gap-6 w-fit">
-        <p class="w-fit font-semibold text-cyan-400 text-xl text-left">
+      <div class="flex flex-col justify-center items-center gap-6 w-fit">
+        <p class="w-fit font-semibold text-cyan-400 text-xl text-center">
           <span class="font-extrabold">+</span> {i18n.HERO.FOOTER_LEFT_LINE1}
           <br />
           {i18n.HERO.FOOTER_LEFT_LINE2}
