--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,9 +41,11 @@ const { title } = Astro.props;
   html,
   body {
     font-family: "Titillium Web", sans-serif;
-    background-color: #000000;
   }
 
+  html{
+    background-color: #000000;
+  }
   /* TÍTULOS */
   h1,
   h2,
