--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const i18n = await useTranslation(lang);
 
 <div
   id="footer"
-  class="z-10 flex lg:flex-row flex-col justify-between items-center gap-5 px-28 py-10 border-white/50 border-t-1 w-full"
+  class="z-10 flex lg:flex-row flex-col justify-between items-center gap-5 px-5 lg:px-28 py-10 border-white/50 border-t-1 w-full"
 >
   <div class="flex justify-center items-center gap-6 text-white">
     <p class="text-sm">Copyright © OM SMART {new Date().getFullYear()}</p>
