--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -30,11 +30,11 @@ import "../styles/nuevo.css";
       </div>
     </div>
   </div>
- <!-- TEXTOS -->
- <div
- id="textos"
- class="top-[50px] md:right-0 md:left-0 z-[20] md:absolute relative flex md:flex-row flex-col mx-auto w-full md:max-w-[1200px]"
->
+  <!-- TEXTOS -->
+  <div
+    id="textos"
+    class="top-[50px] md:right-0 md:left-0 z-[20] md:absolute relative flex md:flex-row flex-col mx-auto w-full md:max-w-[1200px]"
+  >
     <div
       class="flex flex-col items-center md:items-start p-4 md:p-0 w-full md:w-auto md:text-left text-center"
     >
@@ -42,13 +42,13 @@ import "../styles/nuevo.css";
         id="textos1"
         class="md:top-0 md:left-0 md:absolute w-full md:w-[560px] md:text-left"
       >
-        <div class="md:pl-5 os-animation" data-anim="fadeInLeft" style="--delay:1s">
+        <div
+          class="md:pl-5 os-animation"
+          data-anim="fadeInLeft"
+          style="--delay:1s"
+        >
           <span class="font-normal text-[#00ffff] text-[32px] md:text-[52px]">
-            <img
-              src="/imagenes/cruz.png"
-              class="inline w-[29px] h-[29px] object-contain"
-              alt="cruz"
-            /> Smart City.
+            + Smart City.
           </span>
           <span class="font-normal text-[32px] text-white md:text-[52px]">
             Interacción y transformación urbana sostenible
@@ -65,7 +65,11 @@ import "../styles/nuevo.css";
         id="textos2"
         class="md:top-[770px] md:right-0 md:absolute mt-8 md:mt-0 w-full md:w-[456px] md:text-right"
       >
-        <div class="md:pr-5 os-animation" data-anim="fadeInLeft" style="--delay:1s">
+        <div
+          class="md:pr-5 os-animation"
+          data-anim="fadeInLeft"
+          style="--delay:1s"
+        >
           <span
             class="font-semibold text-[#00ffff] text-sm uppercase tracking-[-5px]"
             >________</span
@@ -74,13 +78,7 @@ import "../styles/nuevo.css";
             Smart City</span
           >
           <br /><br />
-          <span class="text-[#00ffff] text-3xl">
-            <img
-              src="/imagenes/cruz.png"
-              class="inline w-[29px] h-[29px] object-contain"
-              alt="cruz"
-            />
-          </span>
+          <span class="text-[#00ffff] text-3xl"> + </span>
           <span class="text-white text-3xl">
             El propósito de una Smart City es alcanzar una gestión eficiente
           </span>
@@ -95,7 +93,11 @@ import "../styles/nuevo.css";
         id="textos3"
         class="md:top-[1300px] md:left-0 md:absolute mt-8 md:mt-0 w-full md:w-[550px] md:text-left"
       >
-        <div class="md:pl-5 os-animation" data-anim="fadeInLeft" style="--delay:1s">
+        <div
+          class="md:pl-5 os-animation"
+          data-anim="fadeInLeft"
+          style="--delay:1s"
+        >
           <span
             class="font-semibold text-[#00ffff] text-sm uppercase tracking-[-5px]"
             >________</span
@@ -105,11 +107,7 @@ import "../styles/nuevo.css";
           >
           <br /><br />
           <span class="text-white text-3xl">
-            <img
-              src="/imagenes/cruz.png"
-              class="inline w-[29px] h-[29px] object-contain"
-              alt="cruz"
-            />
+            <span class="text-[#00ffff] text-3xl"> + </span>
             Consultoría y asesoría en gestión de ciudades inteligentes
           </span>
           <br />
@@ -130,24 +128,53 @@ import "../styles/nuevo.css";
   >
     {
       [
-        { id: 1, img: "e1.png", anim: "fadeIn", delay: "1s" },
-        { id: 2, img: "e3.png", anim: "fadeInDown", delay: "3s", brilla: true },
-        { id: 3, img: "e5.png", anim: "fadeInDown", delay: "5s", brilla: true },
-        { id: 4, img: "e4.png", anim: "fadeInUp", delay: "4s" },
-        { id: 5, img: "e2.png", anim: "fadeInUp", delay: "2s" },
-        { id: 6, img: "e6.png", anim: "fadeInUp", delay: "6s", brilla: true },
+        { id: 1, img: "e1.png", anim: "fadeIn", delay: "1s", z: 10 },
+        {
+          id: 2,
+          img: "e3.png",
+          anim: "fadeInDown",
+          delay: "3s",
+          brilla: true,
+          blink: "0s",
+          z: 30,
+        }, // 👈 arriba
+        {
+          id: 3,
+          img: "e5.png",
+          anim: "fadeInDown",
+          delay: "5s",
+          brilla: true,
+          blink: "1.5s",
+          z: 20,
+        },
+        { id: 4, img: "e4.png", anim: "fadeInUp", delay: "4s", z: 15 },
+        { id: 5, img: "e2.png", anim: "fadeInUp", delay: "2s", z: 12 },
+        {
+          id: 6,
+          img: "e6.png",
+          anim: "fadeInUp",
+          delay: "6s",
+          brilla: true,
+          blink: "3s",
+          z: 18,
+        },
       ].map((e) => (
         <div
           id={`edificio${e.id}`}
           class="top-0 left-1/2 absolute w-full max-w-[1200px] -translate-x-1/2"
-          style="aspect-ratio:1200 / 1510;"
+          style={`aspect-ratio:1200 / 1510; z-index:${e.z ?? 10};`}
         >
           <div
             class="os-animation"
             data-anim={e.anim}
             style={`--delay:${e.delay}`}
           >
-            <img src={`/imagenes/${e.img}`} class={e.brilla ? "brilla w-full h-auto object-contain" : "w-full h-auto object-contain"} alt={`edificio-${e.id}`} />
+            <img
+              src={`/imagenes/${e.img}`}
+              class={`${e.brilla ? "brilla" : ""} w-full h-auto object-contain`}
+              style={e.brilla ? `--blink-delay:${e.blink || "0s"}` : ""}
+              alt={`edificio-${e.id}`}
+            />
           </div>
         </div>
       ))
@@ -520,5 +547,23 @@ import "../styles/nuevo.css";
   }
   .os-animation.animated {
     opacity: 1;
+  }
+
+  .brilla {
+    animation: blinkGlow 2.5s ease-in-out infinite;
+    animation-delay: var(--blink-delay);
+  }
+
+  @keyframes blinkGlow {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0.4;
+      filter: brightness(1.35);
+    }
+    100% {
+      opacity: 1;
+    }
   }
 </style>
